--- a/amplify.yml
+++ b/amplify.yml
@@ -9,6 +9,11 @@ frontend:
     build:
       commands:
         - npm run build
+        - env | grep -e GEMINI_API_KEY >> .env.production
+        - env | grep -e GOOGLE_CLIENT_EMAIL >> .env.production
+        - env | grep -e GOOGLE_PRIVATE_KEY >> .env.production
+        - env | grep -e GOOGLE_SHEET_ID >> .env.production
+        - env | grep -e NEXT_PUBLIC_GOOGLE_SHEET_ID >> .env.production
   artifacts:
     baseDirectory: .next  # or "build" or "dist" depending on your framework
     files:
